[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/imjp94.YAFSM/scenes/StateMachineEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/imjp94.YAFSM/scenes/ContextMenu.tscn" type="PackedScene" id=2]

[node name="StateMachineEditor" type="GraphEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContextMenu" parent="." instance=ExtResource( 2 )]
items = [ "Add State", null, 0, false, false, 0, 0, null, "", false, "Add Entry", null, 0, false, false, 1, 0, null, "", false, "Add Exit", null, 0, false, false, 2, 0, null, "", false ]

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]

[node name="OverlayContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="OverlayContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="OverlayContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="CreateStateMachine" type="Button" parent="OverlayContainer/CenterContainer"]
margin_left = 440.0
margin_top = 290.0
margin_right = 583.0
margin_bottom = 310.0
text = "Create StateMachine"
